# Binate

./: Cargo.toml  README.md
crates/binate-cli/: Cargo.toml
crates/binate-cli/src/: main.rs  report.rs
crates/binate-core/: Cargo.toml  README.md
crates/binate-core/src/: binary.rs  diff.rs  disasm.rs  dwarf.rs  error.rs  lib.rs  normalize.rs  symbol.rs
src/: binary.rs  diff.rs  dwarf.rs  error.rs  main.rs  normalize.rs  report.rs
