[package]
name = "binate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "binate"
path = "src/main.rs"

[dependencies]
object         = { version = "0.36", features = ["read", "std"] }
gimli          = { version = "0.31", default-features = false, features = ["read", "std"] }
memmap2        = "0.9"
iced-x86       = { version = "1.21", default-features = false, features = ["std", "decoder", "intel", "fast_fmt", "lazy_static"] }
similar        = { version = "2.6", features = ["text"] }
console        = "0.15"
rayon          = "1.10"
clap           = { version = "4.5", features = ["derive", "color"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
thiserror      = "2"
regex          = "1.10"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
insta = "1.38"
