[package]
name = "binate-core"
version = "0.1.0"
edition = "2021"
description = "Semantic diff engine for validating reproducible Rust builds"
license = "MIT"
repository = "https://github.com/camdenslade/binate"

[dependencies]
object     = { version = "0.36", features = ["read", "std"] }
gimli      = { version = "0.31", default-features = false, features = ["read", "std"] }
memmap2    = "0.9"
iced-x86   = { version = "1.21", default-features = false, features = ["std", "decoder", "intel", "fast_fmt", "lazy_static"] }
rayon      = "1.10"
regex      = "1.10"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "2"
tracing    = "0.1"
